--- a/apps/blockchain/.gitignore
+++ b/apps/blockchain/.gitignore
@@ -19,5 +19,6 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-data/db
-.autoenv.zsh
+# Ignore package tarball (built via "mix hex.build").
+blockchain-*.tar
+
